src/fr/ubordeaux/deptinfo/compilation/lea/parser/Parser.output
Terminals unused in grammar

    "comparable"
    "equivalent"


Grammar

    0 $accept: S $end

    1 S: imports declarations

    2 imports: %empty
    3        | imports import

    4 import: "import" LITTERAL_STRING

    5 declarations: declarations declaration
    6             | declaration

    7 declaration: "class" IDENTIFIER implements extends '{' classDefinition '}'
    8            | "class" "main" '{' classDefinition '}'
    9            | "interface" IDENTIFIER extends_public '{' interfaceDefinition '}'

   10 implements: %empty
   11           | "implements" classNames

   12 extends: %empty
   13        | "extends" determiner className

   14 extends_public: %empty
   15               | "extends" className

   16 classNames: classNames ',' className
   17           | className

   18 className: IDENTIFIER
   19          | IDENTIFIER '<' classNames '>'

   20 classDefinition: %empty
   21                | classDefinitionContent classDefinition

   22 classDefinitionContent: typeDefinition
   23                       | constDefinition
   24                       | attributeDefinition
   25                       | methodDefinition

   26 typeDefinition: "type" IDENTIFIER ":=" typeExpr

   27 constDefinition: "const" IDENTIFIER ":=" constExpr

   28 attributeDefinition: determiner IDENTIFIER ':' typeExpr ';'

   29 methodDefinition: "main" '(' argsDefinition ')' block

   30 $@1: %empty

   31 methodDefinition: determiner IDENTIFIER '(' argsDefinition ')' $@1 block

   32 $@2: %empty

   33 methodDefinition: determiner IDENTIFIER '(' argsDefinition ')' $@2 ';'

   34 $@3: %empty

   35 methodDefinition: determiner specifier "procedure" IDENTIFIER '(' argsDefinition ')' $@3 block

   36 $@4: %empty

   37 methodDefinition: determiner specifier "procedure" IDENTIFIER '(' argsDefinition ')' $@4 ';'

   38 $@5: %empty

   39 methodDefinition: determiner specifier "function" IDENTIFIER '(' argsDefinition ')' ':' typeExpr $@5 block

   40 $@6: %empty

   41 methodDefinition: determiner specifier "function" IDENTIFIER '(' argsDefinition ')' ':' typeExpr $@6 ';'

   42 $@7: %empty

   43 methodDefinition: "operator" user_defined_operators '(' argsDefinition ')' ':' typeExpr $@7 block

   44 $@8: %empty

   45 methodDefinition: "operator" user_defined_operators '(' argsDefinition ')' ':' typeExpr $@8 ';'

   46 determiner: %empty
   47           | "private"
   48           | "public"
   49           | "protected"

   50 specifier: %empty
   51          | "virtual"
   52          | "final"

   53 user_defined_operators: "&&"
   54                       | "||"
   55                       | '!'
   56                       | '<'
   57                       | "<="
   58                       | '>'
   59                       | ">="
   60                       | "=="
   61                       | "!="
   62                       | '+'
   63                       | '-'
   64                       | '*'
   65                       | '/'
   66                       | '%'
   67                       | "++"
   68                       | "--"
   69                       | '&'
   70                       | '|'
   71                       | "<<"
   72                       | ">>"
   73                       | ":="
   74                       | "+="
   75                       | "-="
   76                       | "*="
   77                       | "/="
   78                       | "%="
   79                       | "||="
   80                       | "&&="
   81                       | "&="
   82                       | "|="
   83                       | "<<="
   84                       | ">>="
   85                       | "[]"

   86 interfaceDefinition: "procedure" IDENTIFIER '(' argsDefinition ')' ';'
   87                    | "function" IDENTIFIER '(' argsDefinition ')' ':' typeExpr ';'

   88 typeExpr: "char"
   89         | "integer"
   90         | "float"
   91         | "boolean"
   92         | "string"
   93         | "enum" '<' typeNames '>'
   94         | "range" '<' typeExpr '>'
   95         | "list" '<' typeExpr '>'
   96         | "set" '<' typeExpr '>'
   97         | "map" '<' typeExpr ',' typeExpr '>'
   98         | typePtrExpr

   99 typePtrExpr: IDENTIFIER '<' typeExprs '>'
  100            | IDENTIFIER

  101 typeExprs: typeExprs ',' typeExpr
  102          | typeExpr

  103 typeNames: typeNames ',' typeName
  104          | typeName

  105 typeName: IDENTIFIER

  106 argsDefinition: argsDefinition ',' argDefinition
  107               | argDefinition

  108 argDefinition: IDENTIFIER ':' typeExpr

  109 block: '{' varDefinitions stms '}'

  110 varDefinitions: %empty
  111               | varDefinitions varDefinition

  112 varDefinition: IDENTIFIER ':' typeExpr ';'

  113 stms: stms stm
  114     | stm

  115 stm: simple_stm ';'
  116    | "if" '(' expr ')' stm
  117    | "if" '(' expr ')' stm "else" stm
  118    | "while" '(' expr ')' stm
  119    | "do" stm "while" '(' expr ')' ';'
  120    | "for" '(' assignedVariable ':' expr ')' stm
  121    | "foreach" assignedVariable "in" expr stm
  122    | "switch" '(' assignedVariable ')' '{' case default '}'
  123    | block

  124 case: "case" expr ':' stms
  125     | "case" expr ':' stms case
  126     | error

  127 default: "default" ':' stms
  128        | %empty

  129 simple_stm: assignedVariable ":=" expr
  130           | assignedVariable "++"
  131           | assignedVariable "--"
  132           | assignedVariable "+=" expr
  133           | assignedVariable "-=" expr
  134           | assignedVariable "*=" expr
  135           | assignedVariable "/=" expr
  136           | assignedVariable "%=" expr
  137           | assignedVariable "||=" expr
  138           | assignedVariable "&&=" expr
  139           | assignedVariable "&=" expr
  140           | assignedVariable "|=" expr
  141           | assignedVariable "<<=" expr
  142           | assignedVariable ">>=" expr
  143           | methodName '(' args ')'
  144           | "readln" '(' expr ')'
  145           | "write" '(' expr ')'
  146           | "writeln" '(' expr ')'
  147           | "break"
  148           | "continue"
  149           | "return" expr

  150 assignedVariable: IDENTIFIER
  151                 | IDENTIFIER '[' args ']'
  152                 | assignedVariable '.' IDENTIFIER
  153                 | "this"

  154 methodName: IDENTIFIER
  155           | assignedVariable '.' IDENTIFIER

  156 args: args ',' expr
  157     | expr

  158 constExpr: "null"
  159          | NUMBER_INTEGER
  160          | NUMBER_FLOAT
  161          | LITTERAL_CHAR
  162          | LITTERAL_STRING
  163          | '[' NUMBER_INTEGER ".." NUMBER_INTEGER ']'

  164 expr: constExpr
  165     | assignedVariable
  166     | methodName '(' args ')'
  167     | "new" typePtrExpr '(' args_opt ')'
  168     | expr "&&" expr
  169     | expr "||" expr
  170     | '!' expr
  171     | expr '<' expr
  172     | expr "<=" expr
  173     | expr '>' expr
  174     | expr ">=" expr
  175     | expr "==" expr
  176     | expr "!=" expr
  177     | expr '+' expr
  178     | expr '-' expr
  179     | '-' expr
  180     | expr '*' expr
  181     | expr '/' expr
  182     | expr '%' expr
  183     | expr "++"
  184     | expr "--"
  185     | "++" expr
  186     | "--" expr
  187     | expr '&' expr
  188     | expr '|' expr
  189     | expr "<<" expr
  190     | expr ">>" expr
  191     | '(' expr ')'

  192 args_opt: %empty
  193         | args


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 55 170
    '%' (37) 66 182
    '&' (38) 69 187
    '(' (40) 29 31 33 35 37 39 41 43 45 86 87 116 117 118 119 120 122 143 144 145 146 166 167 191
    ')' (41) 29 31 33 35 37 39 41 43 45 86 87 116 117 118 119 120 122 143 144 145 146 166 167 191
    '*' (42) 64 180
    '+' (43) 62 177
    ',' (44) 16 97 101 103 106 156
    '-' (45) 63 178 179
    '.' (46) 152 155
    '/' (47) 65 181
    ':' (58) 28 39 41 43 45 87 108 112 120 124 125 127
    ';' (59) 28 33 37 41 45 86 87 112 115 119
    '<' (60) 19 56 93 94 95 96 97 99 171
    '>' (62) 19 58 93 94 95 96 97 99 173
    '[' (91) 151 163
    ']' (93) 151 163
    '{' (123) 7 8 9 109 122
    '|' (124) 70 188
    '}' (125) 7 8 9 109 122
    error (256) 126
    ":=" (258) 26 27 73 129
    "+=" (259) 74 132
    "-=" (260) 75 133
    "*=" (261) 76 134
    "/=" (262) 77 135
    "%=" (263) 78 136
    "||=" (264) 79 137
    "&&=" (265) 80 138
    "&=" (266) 81 139
    "|=" (267) 82 140
    "<<=" (268) 83 141
    ">>=" (269) 84 142
    "++" (270) 67 130 183 185
    "--" (271) 68 131 184 186
    "&&" (272) 53 168
    "||" (273) 54 169
    "<<" (274) 71 189
    ">>" (275) 72 190
    ".." (276) 163
    "==" (277) 60 175
    "<=" (278) 57 172
    ">=" (279) 59 174
    "!=" (280) 61 176
    "boolean" (281) 91
    "break" (282) 147
    "char" (283) 88
    "class" (284) 7 8
    "comparable" (285)
    "const" (286) 27
    "continue" (287) 148
    "do" (288) 119
    "else" (289) 117
    "enum" (290) 93
    "equivalent" (291)
    "extends" (292) 13 15
    "final" (293) 52
    "float" (294) 90
    "for" (295) 120
    "foreach" (296) 121
    "function" (297) 39 41 87
    "if" (298) 116 117
    "implements" (299) 11
    "import" (300) 4
    "in" (301) 121
    "integer" (302) 89
    "interface" (303) 9
    "list" (304) 95
    "map" (305) 97
    "main" (306) 8 29
    "new" (307) 167
    "null" (308) 158
    "operator" (309) 43 45
    "private" (310) 47
    "protected" (311) 49
    "public" (312) 48
    "procedure" (313) 35 37 86
    "range" (314) 94
    "readln" (315) 144
    "return" (316) 149
    "set" (317) 96
    "string" (318) 92
    "this" (319) 153
    "type" (320) 26
    "virtual" (321) 51
    "write" (322) 145
    "writeln" (323) 146
    "while" (324) 118 119
    "switch" (325) 122
    "case" (326) 124 125
    "default" (327) 127
    IDENTIFIER <String> (328) 7 9 18 19 26 27 28 31 33 35 37 39 41 86 87 99 100 105 108 112 150 151 152 154 155
    LITTERAL_STRING <String> (329) 4 162
    NUMBER_INTEGER <Integer> (330) 159 163
    LITTERAL_CHAR <Integer> (331) 161
    NUMBER_FLOAT <Float> (332) 160
    WITHOUT_ELSE (333)
    DETERMINER (334)
    SPECIFIER (335)
    LEFTPLUSPLUS (336)
    LEFTMINUSMINUS (337)
    UMINUS (338)
    "[]" (339) 85


Nonterminals, with rules where they appear

    $accept (105)
        on left: 0
    S (106)
        on left: 1
        on right: 0
    imports (107)
        on left: 2 3
        on right: 1 3
    import (108)
        on left: 4
        on right: 3
    declarations (109)
        on left: 5 6
        on right: 1 5
    declaration (110)
        on left: 7 8 9
        on right: 5 6
    implements (111)
        on left: 10 11
        on right: 7
    extends (112)
        on left: 12 13
        on right: 7
    extends_public (113)
        on left: 14 15
        on right: 9
    classNames (114)
        on left: 16 17
        on right: 11 16 19
    className (115)
        on left: 18 19
        on right: 13 15 16 17
    classDefinition (116)
        on left: 20 21
        on right: 7 8 21
    classDefinitionContent (117)
        on left: 22 23 24 25
        on right: 21
    typeDefinition (118)
        on left: 26
        on right: 22
    constDefinition (119)
        on left: 27
        on right: 23
    attributeDefinition (120)
        on left: 28
        on right: 24
    methodDefinition (121)
        on left: 29 31 33 35 37 39 41 43 45
        on right: 25
    $@1 (122)
        on left: 30
        on right: 31
    $@2 (123)
        on left: 32
        on right: 33
    $@3 (124)
        on left: 34
        on right: 35
    $@4 (125)
        on left: 36
        on right: 37
    $@5 (126)
        on left: 38
        on right: 39
    $@6 (127)
        on left: 40
        on right: 41
    $@7 (128)
        on left: 42
        on right: 43
    $@8 (129)
        on left: 44
        on right: 45
    determiner (130)
        on left: 46 47 48 49
        on right: 13 28 31 33 35 37 39 41
    specifier (131)
        on left: 50 51 52
        on right: 35 37 39 41
    user_defined_operators <String> (132)
        on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85
        on right: 43 45
    interfaceDefinition (133)
        on left: 86 87
        on right: 9
    typeExpr <Type> (134)
        on left: 88 89 90 91 92 93 94 95 96 97 98
        on right: 26 28 39 41 43 45 87 94 95 96 97 101 102 108 112
    typePtrExpr <Type> (135)
        on left: 99 100
        on right: 98 167
    typeExprs <Type> (136)
        on left: 101 102
        on right: 99 101
    typeNames <Type> (137)
        on left: 103 104
        on right: 93 103
    typeName <Type> (138)
        on left: 105
        on right: 103 104
    argsDefinition <Type> (139)
        on left: 106 107
        on right: 29 31 33 35 37 39 41 43 45 86 87 106
    argDefinition <Type> (140)
        on left: 108
        on right: 106 107
    block (141)
        on left: 109
        on right: 29 31 35 39 43 123
    varDefinitions (142)
        on left: 110 111
        on right: 109 111
    varDefinition (143)
        on left: 112
        on right: 111
    stms (144)
        on left: 113 114
        on right: 109 113 124 125 127
    stm (145)
        on left: 115 116 117 118 119 120 121 122 123
        on right: 113 114 116 117 118 119 120 121
    case (146)
        on left: 124 125 126
        on right: 122 125
    default (147)
        on left: 127 128
        on right: 122
    simple_stm (148)
        on left: 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149
        on right: 115
    assignedVariable <Type> (149)
        on left: 150 151 152 153
        on right: 120 121 122 129 130 131 132 133 134 135 136 137 138 139 140 141 142 152 155 165
    methodName <Type> (150)
        on left: 154 155
        on right: 143 166
    args <Type> (151)
        on left: 156 157
        on right: 143 151 156 166 193
    constExpr <Type> (152)
        on left: 158 159 160 161 162 163
        on right: 27 164
    expr <Type> (153)
        on left: 164 165 166 167 168 169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191
        on right: 116 117 118 119 120 121 124 125 129 132 133 134 135 136 137 138 139 140 141 142 144 145 146 149 156 157 168 169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191
    args_opt <Type> (154)
        on left: 192 193
        on right: 167


State 0

    0 $accept: • S $end
    1 S: • imports declarations
    2 imports: • %empty
    3        | • imports import

    $default  reduce using rule 2 (imports)

    S        go to state 1
    imports  go to state 2


State 1

    0 $accept: S • $end

    $end  shift, and go to state 3


State 2

    1 S: imports • declarations
    3 imports: imports • import
    4 import: • "import" LITTERAL_STRING
    5 declarations: • declarations declaration
    6             | • declaration
    7 declaration: • "class" IDENTIFIER implements extends '{' classDefinition '}'
    8            | • "class" "main" '{' classDefinition '}'
    9            | • "interface" IDENTIFIER extends_public '{' interfaceDefinition '}'

    "class"      shift, and go to state 4
    "import"     shift, and go to state 5
    "interface"  shift, and go to state 6

    import        go to state 7
    declarations  go to state 8
    declaration   go to state 9


State 3

    0 $accept: S $end •

    $default  accept


State 4

    7 declaration: "class" • IDENTIFIER implements extends '{' classDefinition '}'
    8            | "class" • "main" '{' classDefinition '}'

    "main"      shift, and go to state 10
    IDENTIFIER  shift, and go to state 11


State 5

    4 import: "import" • LITTERAL_STRING

    LITTERAL_STRING  shift, and go to state 12


State 6

    9 declaration: "interface" • IDENTIFIER extends_public '{' interfaceDefinition '}'

    IDENTIFIER  shift, and go to state 13


State 7

    3 imports: imports import •

    $default  reduce using rule 3 (imports)


State 8

    1 S: imports declarations •
    5 declarations: declarations • declaration
    7 declaration: • "class" IDENTIFIER implements extends '{' classDefinition '}'
    8            | • "class" "main" '{' classDefinition '}'
    9            | • "interface" IDENTIFIER extends_public '{' interfaceDefinition '}'

    "class"      shift, and go to state 4
    "interface"  shift, and go to state 6

    $default  reduce using rule 1 (S)

    declaration  go to state 14


State 9

    6 declarations: declaration •

    $default  reduce using rule 6 (declarations)


State 10

    8 declaration: "class" "main" • '{' classDefinition '}'

    '{'  shift, and go to state 15


State 11

    7 declaration: "class" IDENTIFIER • implements extends '{' classDefinition '}'
   10 implements: • %empty
   11           | • "implements" classNames

    "implements"  shift, and go to state 16

    $default  reduce using rule 10 (implements)

    implements  go to state 17


State 12

    4 import: "import" LITTERAL_STRING •

    $default  reduce using rule 4 (import)


State 13

    9 declaration: "interface" IDENTIFIER • extends_public '{' interfaceDefinition '}'
   14 extends_public: • %empty
   15               | • "extends" className

    "extends"  shift, and go to state 18

    $default  reduce using rule 14 (extends_public)

    extends_public  go to state 19


State 14

    5 declarations: declarations declaration •

    $default  reduce using rule 5 (declarations)


State 15
